# Chess_Game

./: README.md  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/cpp/: CMakeLists.txt
composeApp/src/androidMain/kotlin/com/chess/game/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/com/chess/game/logic/: Piece.android.kt
composeApp/src/androidMain/kotlin/com/chess/game/ui/: BoardView.android.kt
composeApp/src/commonMain/cmake/: CMakeLists.txt
composeApp/src/commonMain/kotlin/com/chess/game/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/com/chess/game/jniExample/: NativeBase64.kt  NativeBase64Headers.c
composeApp/src/commonMain/kotlin/com/chess/game/logic/: Game.kt  Piece.kt
composeApp/src/commonMain/kotlin/com/chess/game/ui/: BoardView.kt
composeApp/src/commonMain/kotlin/com/chess/game/values/: colors.kt
composeApp/src/iosMain/kotlin/com/chess/game/: MainViewController.kt  Platform.ios.kt
composeApp/src/nativeMain/cpp/: ChessEngine.cpp  ChessEngine.h
composeApp/src/nativeMain/cpp/model/: PieceMove.h
composeApp/src/nativeMain/cpp/moves/: ChessPieceMoves.cpp  ChessPieceMoves.h
composeApp/src/nativeMain/kotlin/com/chess/game/logic/: Game.native.kt  Piece.native.kt
composeApp/src/nativeMain/kotlin/com/chess/game/ui/: BoardView.native.kt
composeApp/src/nativeMain/kotlin/jni/: ChessJNI.cpp
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
proto/piece/: piece.proto  protobuf-peice-compiler.sh
(+1 files in other folders)
